<resources>
    <string name="app_name">Colega</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="tagline">News For You</string>
    <string name="next">Next</string>
    <string name="welcome_back">Welcome\nBack!</string>
    <string name="password" translatable="false">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="username" translatable="false">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="birth_date">Birth Date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_account"><u>Create New Account</u></string>
    <string name="app_name_dot" translatable="false">Colega.</string>
    <string name="see_more">See More</string>
    <string name="just_for_you">Just For You</string>
    <string name="headline_image" translatable="false">Headline Image</string>
    <string name="related_news_image" translatable="false">Related News Image</string>
    <string name="close">Close</string>
    <string name="detail_news">Detail News</string>
    <string name="home" translatable="false">Home</string>
    <string name="search">Search</string>
    <string name="bookmark">Bookmark</string>
    <string name="profile">Profile</string>
    <string name="default_time_format" translatable="false">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="date_format" translatable="false">MMM d, yyyy</string>
    <string name="time_format" translatable="false">HH:mm a</string>
    <string name="go_to_the_original_page">Go To the Original Page</string>
    <string name="detail_news_image" translatable="false">Detail News Image</string>
    <string name="password_status">Your password is wrong!</string>
    <string name="username_status">Username doesn\'t exist</string>
    <string name="username_field">Username should not contain whitespace!</string>
    <string name="username_already_exist">Username Already Exist</string>
    <string name="register_success">Horay! Welcome to the club!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_account">Logout your account?</string>
    <string name="confirm_logout">Are you sure to logout your account?</string>


    <string name="error_msg">Sorry! Couldn\'t fetch Movies.</string>
    <string name="btn_retry" translatable="false">Retry</string>
    <string name="error_msg_no_internet" translatable="false">Not connected to internet</string>
    <string name="error_msg_timeout" translatable="false">The server took too long to respond</string>
    <string name="error_msg_unknown" translatable="false">An unexpected error occurred</string>
    <string name="tap_to_reload" translatable="false">Tap to reload</string>
    <string name="load_image_button" translatable="false">Load Image Button</string>
    <string name="username_profile" translatable="false">Username:</string>
    <string name="email_profile" translatable="false">Email:</string>
    <string name="birth_date_profile">Birth Date:</string>
    <string name="language">Language:</string>
    <string name="logout_image" translatable="false">Logout Image</string>
    <string name="source_name" translatable="false">Source Name</string>
    <string name="empty_following" translatable="false">You are not following any source news yet!</string>
    <string name="source" translatable="false">Source</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="greeting" translatable="false">Welcome Back</string>
    <string name="open" translatable="false">Open</string>
    <string name="following" translatable="false">Following</string>
    <string name="follow" translatable="false">Follow</string>

    <string-array name="language_list">
        <item>English</item>
        <item>Bahasa Indonesia</item>
    </string-array>
</resources>