<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:icon="@drawable/ic_round_home_24"
        app:showAsAction="withText"
        android:title="@string/home" />
    <item android:id="@+id/explore"
        app:showAsAction="withText"
        android:icon="@drawable/ic_round_explore_24"
        android:title="@string/search"/>
    <item android:id="@+id/readLater"
        app:showAsAction="withText"
        android:icon="@drawable/ic_round_menu_book_24"
        android:title="@string/read_later"/>
    <item android:id="@+id/profile"
        app:showAsAction="withText"
        android:icon="@drawable/ic_round_person_24"
        android:title="@string/profile"/>

</menu>