<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:id="@+id/loadMoreLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:visibility="visible"
        android:focusable="true">

        <ImageButton
            android:id="@+id/ibLoadMoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:background="@drawable/retry_selector"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_refresh_24"
            android:backgroundTint="@color/shimmer_placeholder"
            android:tintMode="src_in"
            android:contentDescription="@string/load_image_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLoadMore"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:text="@string/error_msg_no_internet"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tap_to_reload" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>