<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/playfair_display"
            android:text="@string/welcome_back"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/roboto"
                android:imeOptions="actionNext"
                android:hint="@string/username"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:passwordToggleDrawable="@drawable/show_password_state"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey_999">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:hint="@string/password"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/radius_10_dp_border_white"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_10_dp_border_black"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/grey_95"
            app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
            app:layout_constraintStart_toStartOf="@+id/btnSignUp"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>