<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.NewsDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:padding="14dp"
                android:text="@string/detail_news"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvClose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/close"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarDetail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDetail"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="18dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivNews"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/radius_10_dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/news"
                    android:contentDescription="@string/detail_news_image" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#EFEFEF"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <TextView
                    android:id="@+id/tvDetailCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    android:text="category"
                    android:textColor="#525252" />
            </androidx.cardview.widget.CardView>

            <CheckBox
                android:id="@+id/btnBookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:button="@drawable/bookmark_state"
                android:buttonTint="@color/black"
                android:contentDescription="@string/bookmark"
                android:text="@string/bookmark"
                app:layout_constraintBottom_toBottomOf="@+id/cvCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cvCategory" />

            <TextView
                android:id="@+id/tvDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingVertical="10dp"
                android:text="Title"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/cvCategory"
                app:layout_constraintTop_toBottomOf="@+id/cvCategory" />

            <TextView
                android:id="@+id/tvDetailSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Source"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tvDetailTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="|"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvDetailSource"
                app:layout_constraintStart_toEndOf="@+id/tvDetailSource"
                app:layout_constraintTop_toTopOf="@+id/tvDetailSource" />

            <TextView
                android:id="@+id/tvDetailDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="21 August 2022"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/textView11" />

            <TextView
                android:id="@+id/tvDetailDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingVertical="10dp"
                android:text="Description"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="@+id/tvDetailSource"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailSource" />

            <TextView
                android:id="@+id/tvDetailContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="Content"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tvDetailDesc"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailDesc" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnToUrlPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/radius_10_dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/go_to_the_original_page"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailContent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>